hphp/test/zend/good/ext/standard/tests/url/bug55399.php
<?php

var_dump(parse_url(":"));

?>